# MPFE

./: .e2b_sandbox.json  .gitignore  AGENTS.md  LICENSE  OPTIMIZATION_REPORT.md  README.md  frontend-streaming-design.md  graph_current.mmd  graph_optimized.mmd  graph_simulation.html  plan.md  railway.json  syllabus_agent_spec.md  test-plan.md  test-report.md
apps/agent/: .dockerignore  .env.example  DESIGN.md  Dockerfile  drive_for_test.py  e2e_run.py  e2e_run_optimized.py  e2e_run_traced.py  langgraph.json  pyproject.toml
apps/agent/agent/: __init__.py  config.py  events.py  graph.py  graph_optimized.py  llm.py  prompts.py  state.py  store_keys.py  supervisor.py  tracing.py
apps/agent/agent/db/: supabase_client.py
apps/agent/agent/memory/: store.py
apps/agent/agent/nodes/: __init__.py  accept_lesson.py  activities_generator.py  chapter_guard.py  clarify_with_user.py  critic.py  finalize.py  init_node.py  lesson_fanout.py  lesson_worker.py  lesson_writer.py  reject_lesson.py  search_planner.py  search_planner_once.py  syllabus_outline.py  web_search.py  web_search_parallel.py
apps/agent/agent/search/: __init__.py  nodes.py  serper.py  subgraph.py
apps/agent/agent/tools/: __init__.py  db_tools.py  plan_tools.py
apps/agent/agent/writer/: __init__.py  nodes.py  subgraph.py
apps/agent/tests/: test_events.py  test_import.py  test_live_llm.py  test_nodes_accept_reject.py
apps/frontend/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  railway.json  (+5 more)
scripts/: e2b_sandbox.py
(+82 files in other folders)
