[project]
name = "syllabus-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.6.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.2",
  "supabase>=2.9.0",
  "pydantic>=2.9",
  "python-dotenv>=1.0.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
